# HTTP-Socket-Programming

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requests.txt
SocketServices/: SocketHandler.cpp  SocketHandler.h
client/: RequestBuilder.cpp  RequestBuilder.h  RequestCommand.cpp  RequestCommand.h  StringUtils.cpp  StringUtils.h  WebClient.cpp  WebClient.h  main.cpp
client/response/: Response.cpp  Response.h  ResponseHandler.cpp  ResponseHandler.h
fileServices/: FileHandler.cpp  FileHandler.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
resources/: html_version_test.html  test_version.txt
server/: ConnectionHandler.cpp  ConnectionHandler.h  ConnectionsTracker.cpp  ConnectionsTracker.h  GetRequest.cpp  GetRequest.h  HttpHeader.h  PostRequest.cpp  PostRequest.h  Request.cpp  Request.h  RequestParser.cpp  RequestParser.h  WebServer.cpp  WebServer.h
server/util/: Constants.cpp  Constants.h  HttpHeader.cpp  HttpHeader.h
socketServices/: SocketHandler.cpp  SocketHandler.h
